--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -883,6 +883,9 @@ a {
 .cid-sothHgNbHe .mbr-text {
   text-align: left;
 }
+.cid-sothHgNbHe .position {
+  text-align: left;
+}
 .cid-snpLVVaYue {
   padding-top: 6rem;
   padding-bottom: 6rem;
