--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -886,6 +886,10 @@ a {
 .cid-sothHgNbHe .position {
   text-align: left;
 }
+.cid-sothHgNbHe P {
+  color: #232323;
+  text-align: left;
+}
 .cid-snpLVVaYue {
   padding-top: 6rem;
   padding-bottom: 6rem;
