--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -9,11 +9,11 @@ body {
 }
 .display-1 {
   font-family: 'Raleway', sans-serif;
-  font-size: 2rem;
+  font-size: 1.6rem;
   line-height: 1.1;
 }
 .display-1 > .mbr-iconfont {
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 .display-2 {
   font-family: 'Raleway', sans-serif;
@@ -54,14 +54,14 @@ body {
 /* 0.65 - min scale variable, may vary */
 @media (max-width: 992px) {
   .display-1 {
-    font-size: 1.6rem;
+    font-size: 1.28rem;
   }
 }
 @media (max-width: 768px) {
   .display-1 {
-    font-size: 1.4rem;
-    font-size: calc( 1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.1 * (1.35rem + (2 - 1.35) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.12rem;
+    font-size: calc( 1.21rem + (1.6 - 1.21) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.1 * (1.21rem + (1.6 - 1.21) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
     font-size: 0.96rem;
@@ -1277,90 +1277,13 @@ a {
     left: -1rem;
   }
 }
-.cid-sFIxiwt7Ve {
-  padding-top: 1rem;
+.cid-sUSw6sWHuN {
+  padding-top: 4rem;
   padding-bottom: 2rem;
   background-color: #ffffff;
 }
-.cid-sFIxiwt7Ve .top-line {
-  display: flex;
-  justify-content: space-between;
-}
-.cid-sFIxiwt7Ve .mbr-section-title,
-.cid-sFIxiwt7Ve .mbr-section-subtitle {
-  text-align: center;
-}
-.cid-sFIxiwt7Ve .card:not(:nth-last-child(1)) {
-  margin-bottom: 2rem;
-}
-.cid-sFIxiwt7Ve .card-wrapper {
-  border-radius: 4px;
-  background-color: #fafafa;
-  background-color: transparent;
-}
-.cid-sFIxiwt7Ve .image-wrapper img {
-  width: 100%;
-  object-fit: cover;
-}
-@media (max-width: 767px) {
-  .cid-sFIxiwt7Ve .card-box {
-    padding: 1rem;
-  }
-}
-@media (min-width: 768px) {
-  .cid-sFIxiwt7Ve .card-box {
-    padding-right: 2rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-sFIxiwt7Ve .card-box {
-    padding-left: 2rem;
-    padding-right: 4rem;
-  }
-}
-.cid-sK4EbM3sd3 {
-  padding-top: 1rem;
-  padding-bottom: 6rem;
-  background-color: #ffffff;
-}
-.cid-sK4EbM3sd3 .top-line {
-  display: flex;
-  justify-content: space-between;
-}
-.cid-sK4EbM3sd3 .mbr-section-title,
-.cid-sK4EbM3sd3 .mbr-section-subtitle {
-  text-align: center;
-}
-.cid-sK4EbM3sd3 .card:not(:nth-last-child(1)) {
-  margin-bottom: 2rem;
-}
-.cid-sK4EbM3sd3 .card-wrapper {
-  border-radius: 4px;
-  background-color: #fafafa;
-  background-color: transparent;
-}
-.cid-sK4EbM3sd3 .image-wrapper img {
-  width: 100%;
-  object-fit: cover;
-}
-@media (max-width: 767px) {
-  .cid-sK4EbM3sd3 .card-box {
-    padding: 1rem;
-  }
-}
-@media (min-width: 768px) {
-  .cid-sK4EbM3sd3 .card-box {
-    padding-right: 2rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-sK4EbM3sd3 .card-box {
-    padding-left: 2rem;
-    padding-right: 4rem;
-  }
-}
-.cid-sK4EbM3sd3 .card-title {
-  color: #8caff0;
+.cid-sUSw6sWHuN .mbr-section-subtitle {
+  text-align: left;
 }
 .cid-snJrUfBSUl {
   padding-top: 30px;
