--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -707,7 +707,7 @@ a {
 }
 .cid-snYblsEOSj .mbr-text,
 .cid-snYblsEOSj .mbr-section-btn {
-  text-align: right;
+  text-align: center;
   color: #232323;
 }
 .cid-snYblsEOSj .mbr-section-title {
@@ -733,7 +733,7 @@ a {
   text-align: center;
 }
 .cid-snP0C3O2aF {
-  background-image: url("../../../assets/images/shoulder-massage-2000x1333.jpg");
+  background-image: url("../../../assets/images/shoulder-massage-2000x1333.jpeg");
 }
 @media (max-width: 991px) {
   .cid-snP0C3O2aF .mbr-section-title,
@@ -834,7 +834,7 @@ a {
   }
 }
 .cid-snp1tujvDm {
-  padding-top: 6rem;
+  padding-top: 3rem;
   padding-bottom: 3rem;
   background-color: #203966;
 }
@@ -1289,4 +1289,29 @@ a {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #232323;
+}
+.cid-tTK1VUOEHS {
+  background-color: #bed3f9;
+}
+.cid-tTK1VUOEHS .row {
+  flex-direction: row-reverse;
+}
+@media (max-width: 991px) {
+  .cid-tTK1VUOEHS .image-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+.cid-tTK1VUOEHS .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+@media (min-width: 992px) {
+  .cid-tTK1VUOEHS .text-wrapper {
+    padding: 0 2rem;
+  }
+}
+@media (max-width: 768px) {
+  .cid-tTK1VUOEHS .text-wrapper {
+    margin-bottom: 2rem;
+  }
 }
